[DEV-11817] Fixed wrong font issue

--- a/packages/ui/src/typography.styles.css
+++ b/packages/ui/src/typography.styles.css
@@ -1,5 +1,5 @@
 body {
-    @apply font-poppins;
+    @apply font-inter;
 }
 
 .title-x-large {
